Fix filter select being transparent on mobile

--- a/client/styles/components/filters.scss
+++ b/client/styles/components/filters.scss
@@ -10,9 +10,11 @@
 
   .filter {
     width: 100%;
+    @extend .mt-half;
 
     @include breakpoint(sm) {
       width: unset;
+      margin-top: unset;
 
       & + .filter {
         margin-left: 1em;
