--- a/client/styles/components/input.scss
+++ b/client/styles/components/input.scss
@@ -7,6 +7,7 @@
   border-radius: 0.5em;
   cursor: pointer;
   width: 100%;
+  background-color: $white;
 }
 
 .shared-input-select-icon-addon {
